--- a/src/app/funds/balance/qubera-popup/create-fug/step-two/step-two.component.html
+++ b/src/app/funds/balance/qubera-popup/create-fug/step-two/step-two.component.html
@@ -1,3 +1,20 @@
-<p>
-  step-two works!
-</p>
+<div class="modal__content qubera-content">
+	<div class="fiat-deposit-s1 fiat-transfer fiat-create-acc-s2">
+		<h2>Подтверждение по SMS</h2>
+		<p>На номер 38******94 был отправлен код  введите его в поле</p>
+		<form action="#">
+			<div class="input-block">
+				<input type="text" name="code" class="wrap-input__input" formControlName="code">
+				<label class="wrap-input__label" for="firstname">code </label>
+			</div>
+			<div class="resend">
+				<span>Не пришло SMS?</span><button>Отправить снова</button>
+			</div>
+			<button class="btn btn--active balance__title-btn">Подтвердить</button>
+			<div class="change-phone">
+			<a href="#">Сменить номер телефона</a>	
+			</div>
+			
+		</form>
+	</div>
+</div>
