--- a/src/assets/scss/_layout.scss
+++ b/src/assets/scss/_layout.scss
@@ -161,3 +161,16 @@ app-settings, app-dashboard {
 .goog-te-gadget{
   display: block!important;
 }
+
+
+.accessibility-content{
+  position: absolute;
+  height: 0;
+  width: 0;
+  font-size: 0;
+  overflow: hidden;
+  line-height: 0;
+  margin: 0;
+  padding: 0;
+  opacity: 0;
+}
