checked email, add some validation with components, create component for popup cubera

--- a/src/app/funds/balance/balance.component.html
+++ b/src/app/funds/balance/balance.component.html
@@ -334,6 +334,7 @@
     [optionData]="QuberaData"
     [steper]="1"
     (closeSendQuberaPopup)="openQuberaPopup(false)"
+    [myEmail]="email"
   >
   </app-qubera-popup>
 </div>
