--- a/src/app/funds/balance/qubera-popup/create-fug/step-two/step-two.component.html
+++ b/src/app/funds/balance/qubera-popup/create-fug/step-two/step-two.component.html
@@ -1,26 +1,32 @@
 <div class="modal__content qubera-content">
-	<div class="fiat-deposit-s1 fiat-transfer fiat-create-acc-s2">
-		<h2>{{'Transaction confirmation' | translate}}</h2>
-		<div class="inf-code">{{'To number 38 ****** 94 code has been sent enter it to the floor' | translate}}</div>
-		<form [formGroup]="form">
-			<div class="input-block">
-				<input class="wrap-input__input" type="text" name="code" formControlName="code">
-				<label class="wrap-input__label" for="code">{{'Code' | translate}}</label>
-			<div class="resend">
-				<span>Не пришло SMS?</span><button>Отправить снова</button>
-			</div>
-			</div>
-		</form>
-		<button
-		class="btn btn--center"
-		[ngClass]="{'btn--empty-blue': !form.valid}"
-		[disabled]="form.invalid"
-		(click)="enterCode(form.value)"
-		>
-		{{'Confirm' | translate}}
-	</button>
-	<div class="change-number">
-		<a>Change phone number</a>
-	</div>
-</div>
-</div>
+    <h2>{{'Transaction confirmation' | translate}}</h2>
+    <div class="inf-code">{{'To number 38 ****** 94 code has been sent enter it to the floor' | translate}}</div>
+  
+    <form [formGroup]="form">
+      <div class="input-block"  [ngClass]="{'wrap-input--error': !currentCode.valid && currentCode.touched}">
+        <input class="wrap-input__input" type="text" name="code" formControlName="code" required>
+        <label class="wrap-input__label" for="code">{{'Code' | translate}}</label>
+        <ng-container *ngIf="!currentCode.valid && !currentCode.untouched">
+          <div class="input-hint-wrapper">
+             <span
+               class="wrap-input__message"
+               *ngIf="!currentCode.valid">
+                {{'Code field is required.' | translate}}
+             </span>
+          </div>
+        </ng-container>
+      </div>
+    </form>
+    <button
+      class="btn btn--center"
+      [ngClass]="{'btn--empty-blue': !form.valid}"
+      [disabled]="form.invalid"
+      (click)="enterCode(form.value)"
+    >
+      {{'Confirm' | translate}}
+    </button>
+  
+    <div class="change-number">
+      <a>Change phone number</a>
+    </div>
+  </div>
