--- a/src/app/funds/balance/qubera-popup/qubera-popup.component.html
+++ b/src/app/funds/balance/qubera-popup/qubera-popup.component.html
@@ -33,6 +33,7 @@
         *ngIf="component == 'CREATEFUG'"
         [steper]="steper"
         [qubera]="optionData"
+        [email]="myEmail"
       >
       </app-create-fug>
   </div>
