--- a/src/app/funds/balance/qubera-popup/withdraw/step-one-withdraw/step-one-withdraw.component.html
+++ b/src/app/funds/balance/qubera-popup/withdraw/step-one-withdraw/step-one-withdraw.component.html
@@ -54,43 +54,43 @@
 
   <div class="secundary-form">
     <div class="input-block">
-      <input type="text" name="firstname" class="wrap-input__input" formControlName="firstName">
+      <input type="text" name="firstname" class="wrap-input__input" formControlName="firstName" required>
       <label class="wrap-input__label" for="firstname">First Name </label>
     </div>
     <div class="input-block">
-      <input class="wrap-input__input" type="text" name="lastname" formControlName="lastname">
+      <input class="wrap-input__input" type="text" name="lastname" formControlName="lastname" required>
       <label class="wrap-input__label" for="lastname">Last Name</label>
     </div>
     <div class="input-block">
-      <input class="wrap-input__input" type="text" name="bankaddress" formControlName="bankaddress">
+      <input class="wrap-input__input" type="text" name="bankaddress" formControlName="bankaddress" required>
       <label class="wrap-input__label" for="bank-address">Bank Address</label>
     </div>
     <div class="input-block">
-      <input class="wrap-input__input" type="text" name="bankcountrycode" formControlName="bankcountrycode">
+      <input class="wrap-input__input" type="text" name="bankcountrycode" formControlName="bankcountrycode" required>
       <label class="wrap-input__label" for="bankcountrycode">Bank Country Code</label>
     </div>
     <div class="input-block">
-      <input class="wrap-input__input" type="text" name="bankname" formControlName="bankname">
+      <input class="wrap-input__input" type="text" name="bankname" formControlName="bankname" required>
       <label class="wrap-input__label" for="bankname">Bank Name</label>
     </div>
     <div class="input-block">
-      <input class="wrap-input__input" type="text" name="swift" formControlName="swift">
+      <input class="wrap-input__input" type="text" name="swift" formControlName="swift" required>
       <label class="wrap-input__label" for="swift">Swift</label>
     </div>
     <div class="input-block">
-      <input class="wrap-input__input" type="text" name="ibal" formControlName="ibal">
+      <input class="wrap-input__input" type="text" name="ibal" formControlName="ibal" required>
       <label class="wrap-input__label" for="ibal">Iban</label>
     </div>
     <div class="input-block">
-      <input class="wrap-input__input" type="text" name="city" formControlName="city">
+      <input class="wrap-input__input" type="text" name="city" formControlName="city" required>
       <label class="wrap-input__label" for="city">City</label>
     </div>
     <div class="input-block">
-      <input class="wrap-input__input" type="text" name="countryCode" formControlName="countryCode">
+      <input class="wrap-input__input" type="text" name="countryCode" formControlName="countryCode" required>
       <label class="wrap-input__label" for="countryCode">Country Code</label>
     </div>
     <div class="input-block">
-      <input class="wrap-input__input" type="text" name="zipCode" formControlName="zipCode">
+      <input class="wrap-input__input" type="text" name="zipCode" formControlName="zipCode" required>
       <label class="wrap-input__label" for="zipCode">Zip Code</label>
     </div>
   </div>
