--- a/src/app/funds/balance/qubera-popup/withdraw/step-two-withdraw/step-two-withdraw.component.html
+++ b/src/app/funds/balance/qubera-popup/withdraw/step-two-withdraw/step-two-withdraw.component.html
@@ -4,7 +4,7 @@
 
   <form [formGroup]="form">
     <div class="input-block">
-      <input class="wrap-input__input" type="text" name="code" formControlName="code">
+      <input class="wrap-input__input" type="text" name="code" formControlName="code" required>
       <label class="wrap-input__label" for="code">{{'Code' | translate}}</label>
     </div>
   </form>
