--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -236,8 +236,12 @@
     justify-content: space-between;
     max-width: 1490px;
     margin: auto;
+    @media(max-width: 1640px){
+      padding-right: 130px;
+    }
     @media(max-width: 1200px){
       padding: 1.4rem 15px;
+      padding-right: 130px;
     }
     @media(max-width: 992px){
       font-size: 1.2rem;
