add button for popup and component
add payment for deposit

--- a/src/app/funds/balance/qubera-popup/deposit/deposit.component.html
+++ b/src/app/funds/balance/qubera-popup/deposit/deposit.component.html
@@ -25,6 +25,7 @@
   <div class="modal__content qubera-content">
     <app-step-one-deposit
       *ngIf="step === 1"
+      [quberaBank]="qubera"
     >
     </app-step-one-deposit>
   </div>
