--- a/src/app/popups/popups.component.html
+++ b/src/app/popups/popups.component.html
@@ -13,6 +13,10 @@
   <app-login-popup-mobile></app-login-popup-mobile>
 </div>
 
+<div *ngIf="popupService.getQuberaPopupListener() | async">
+  <app-qubera-popups></app-qubera-popups>
+</div>
+
 <div *ngIf="popupService.getRegistrationMobilePopupListener() | async">
   <app-registration-mobile-popup></app-registration-mobile-popup>
 </div>
