--- a/src/app/popups/qubera-popups/qubera-popups.component.html
+++ b/src/app/popups/qubera-popups/qubera-popups.component.html
@@ -1,3 +1,7 @@
-<p>
-  qubera-popups works!
-</p>
+<div class="overlay">
+    <div class="popup popup-login">
+      <div class="popup__close" (click)="closeMe()"></div>
+      <p style="color: black">123124</p>
+  
+    </div>
+  </div>
