--- a/src/app/funds/balance/qubera-popup/create-fug/step-one/step-one.component.scss
+++ b/src/app/funds/balance/qubera-popup/create-fug/step-one/step-one.component.scss
@@ -62,6 +62,11 @@ form .action a {
     cursor: pointer;
 }
 
+form .select {
+    width: 100%;
+    margin-bottom: 10px;
+}
+
 
 .btn {
     &.btn--center {
