--- a/src/app/popups/qubera-popups/qubera-popups.component.html
+++ b/src/app/popups/qubera-popups/qubera-popups.component.html
@@ -1,4 +1,4 @@
-<!-- <div class="overlay">
+<div class="overlay" *ngIf="currentPopup == '1'">
 	<div class="popup popup-login popup-l-s">
 		<div class="popup__close" (click)="closeMe()"></div>
 		<h2 class="last-stage">Остался последний шаг</h2>
@@ -8,11 +8,11 @@
       {{'Я готов' | translate}}
     </button>
 	</div>
-</div> -->
+</div>
 
 
 
-<!-- <div class="overlay">
+<div class="overlay" *ngIf="currentPopup == '2'">
 	<div class="popup popup-login popup-p-b">
 		<div class="popup__close" (click)="closeMe()"></div>
 		<h2 class="personal-ballance">Ваш личный счет пополнен <br>на <b>$334,234.43</b></h2>
@@ -22,11 +22,11 @@
       {{'Перевести деньги на торговый счет' | translate}}
     </button>
 	</div>
-</div> -->
+</div>
 
 
 
-<!-- <div class="overlay">
+<div class="overlay" *ngIf="currentPopup == 'TRANSFER'">
 	<div class="popup popup-login popup-auth">
 		<div class="popup__close" (click)="closeMe()"></div>
 		<h2 class="auth">Подтверждение транзакции</h2>
@@ -45,9 +45,9 @@
 			<button class="btn popup__btn">Submit </button>
 		</form>
 	</div>
-</div> -->
+</div>
 
-<div class="overlay">
+<div class="overlay" *ngIf="currentPopup == '3'">
 	<div class="popup popup-login popup-p-b">
 		<div class="popup__close" (click)="closeMe()"></div>
 		<h2 class="personal-ballance">Ваш торговый счет пополнен<br>на <b>$334,234.43</b></h2>
