--- a/src/app/funds/balance/qubera-popup/deposit/step-one-deposit/step-one-deposit.component.html
+++ b/src/app/funds/balance/qubera-popup/deposit/step-one-deposit/step-one-deposit.component.html
@@ -96,7 +96,7 @@
         </button>
       </div>
     </div>
-    <div class="right-part">
+    <!-- <div class="right-part"> -->
       <!-- <div class="left-block">
         <div class="item-info">
           <span class="key-info">Amount</span>
@@ -119,7 +119,7 @@
           <span class="value-info">1,111,821.00 EUR</span>
         </div>
       </div> -->
-    </div>
+    <!-- </div> -->
   </div>
   <button class="btn btn--active balance__title-btn">OK</button>
   <div class="notice-block">
