--- a/src/app/funds/balance/qubera-popup/deposit/deposit.component.html
+++ b/src/app/funds/balance/qubera-popup/deposit/deposit.component.html
@@ -14,7 +14,7 @@
           [ngClass]="{'steps__item--current': step === 1}"
       >
         <a class="steps__link" (click)="setStep(1)">
-          <span class="steps__number" [ngClass]="{'steps__number--current': step === 1, 'steps__number--valid': step != 1 }"></span>
+          <span class="steps__number" [ngClass]="{'steps__number--current': step === 1, 'steps__number--valid': step != 1 }">1</span>
           <span class="steps__number-mob-current">{{'fiat deposit' | translate}}</span>
           <span class="steps__title">{{'fiat deposit' | translate}}</span>
         </a>
