withdraw qubera mobile step1

--- a/src/assets/scss/pages/fiat/_fiat-fs.scss
+++ b/src/assets/scss/pages/fiat/_fiat-fs.scss
@@ -709,22 +709,71 @@
 
 
 .fiat-withdraw-s1{
+	form{
+		@media(max-width: 640px){
+			border: none;
+		}
+	}
 	.main-form{
 		margin-bottom: 28px;
 		border-bottom: 1px solid #ECECEC;
+		@media(max-width: 1200px){
+			border-bottom: 1px solid #94C2FF;
+		}
+	}
+	.fiat-amount{
+		@media(max-width: 640px){
+
+			max-width: unset;
+			margin-bottom: 25px;
+			width: 100%;
+		}
+	}
+	.refill__select{
+		width: calc(33.333% - 15px);
+		max-width: unset;
+		@media(max-width: 640px){
+			width: 100%;
+			margin-bottom: 25px;
+		}
+	}
+	.secundary-form{
+		.input-block{
+			max-width: unset;
+			@media(max-width: 640px){
+				max-width: unset;
+				width: 100%;
+				margin-bottom: 20px;
+			}
+		}
 	}
 	.info-block {
+		margin: 0 0 32px;
+		@media(max-width: 1240px){
+			padding: 17px 0;
+		}
 		.item-info{
 			justify-content: flex-start;
 		}
 		.key-info{
 			margin-right: 56px;
 			min-width: 143px;
+			@media(max-width: 640px){
+				margin-right: 26px;
+			}
+		}
+		.value-info{
+			@media(max-width: 640px){
+				text-align: left;
+			}
 		}
 		.left-part{
 			margin-left: auto;
 			max-width: 510px;
 			margin-right: 0;
+			@media(max-width: 1200px){
+				margin-left: 0;
+			}
 		}
 	}
 }
