fix close component, and add tab for mobile + edit Merchant withdraw popup, done send method for create Fug, without link

--- a/src/app/funds/balance/balance-mob/balance-mob.component.html
+++ b/src/app/funds/balance/balance-mob/balance-mob.component.html
@@ -30,6 +30,17 @@
       >
         {{'Fiat' | translate}}
       </button>
+      
+
+      <button
+        class="tabs__item"
+        [ngClass]="{'tabs__item--active': currTab === Tab.QUBERA}"
+        (click)="onSelectTab.emit(Tab.QUBERA)"
+        [disabled]="loading"
+      >
+        {{'Qubera' | translate}}
+      </button>
+      
       <button
         class="tabs__item"
         [ngClass]="{'tabs__item--active': currTab === Tab.IEO}"
