--- a/src/app/funds/balance/ieo-table-mob/ieo-table-mob.component.html
+++ b/src/app/funds/balance/ieo-table-mob/ieo-table-mob.component.html
@@ -28,6 +28,15 @@
       >
         {{'Fiat' | translate}}
       </button>
+
+      <button
+        class="tabs__item"
+        [ngClass]="{'tabs__item--active': currTab === Tab.QUBERA}"
+        (click)="onSelectTab.emit(Tab.QUBERA)"
+      >
+        {{'Qubera' | translate}}
+      </button>
+
       <button
         class="tabs__item"
         [ngClass]="{'tabs__item--active': currTab === Tab.IEO}"
