--- a/src/app/funds/balance/qubera-popup/create-fug/step-one/step-one.component.html
+++ b/src/app/funds/balance/qubera-popup/create-fug/step-one/step-one.component.html
@@ -138,13 +138,11 @@
     <div class="rules">
       <p>{{'Read terms and conditions.' | translate}} <a href="">FUG</a></p>
       <div class="check">
-        <!-- <input type="checkbox"
-            [(ngModel)]="theCheckbox"
-            [ngModelOptions]="{standalone: true}"
-            (change)="checked($event)"> -->
             <input type="checkbox"
+                  id="read"
                   formControlName="theCheckbox"
                   (change)="checked($event)"/>
+            <label for="read" class="read"></label>
         <span>{{'I have read the rules' | translate}}</span>
       </div>
     </div>
