--- a/src/app/funds/balance/qubera-popup/create-fug/step-two/step-two.component.html
+++ b/src/app/funds/balance/qubera-popup/create-fug/step-two/step-two.component.html
@@ -1,5 +1,5 @@
 <div class="modal__content qubera-content">
-    <h2>{{'Transaction confirmation' | translate}}</h2>
+    <!-- <h2>{{'Transaction confirmation' | translate}}</h2>
     <div class="inf-code">{{'To number 38 ****** 94 code has been sent enter it to the floor' | translate}}</div>
   
     <form [formGroup]="form">
@@ -28,5 +28,6 @@
   
     <div class="change-number">
       <a>Change phone number</a>
-    </div>
+    </div> -->
+    <iframe width="560" height="315" src="https://sdkweb-test.idcheck.io/AriadNEXT/5d283daf03ae9d7915f284a0/welcome" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
